deploy/proxy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000

      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http

                generate_request_id: true

                request_id_extension:
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
                    use_request_id_for_trace_sampling: true

                tracing:
                  random_sampling:
                    value: 100
                  provider:
                    name: envoy.tracers.opentelemetry
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                      grpc_service:
                        envoy_grpc:
                          cluster_name: tempo
                      service_name: envoy-gateway

                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_1

                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        iam:
                          issuer: "iam"
                          audiences:
                            - "iam"

                          remote_jwks:
                            http_uri:
                              uri: "http://iam-service:8080/.well-known/jwks.json"
                              cluster: iam_jwks_cluster
                              timeout: 5s

                          forward_payload_header: "x-jwt-payload"

                      rules:
                        - match:
                            prefix: "/"
                          requires:
                            provider_name: "iam"

                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                        function envoy_on_request(handle)
                          local request_id = handle:headers():get("x-request-id")
                          local client_id  = handle:headers():get("x-client-id")
                          local session_id = handle:headers():get("x-session-id")

                          if request_id == nil then
                            handle:respond(
                              { [":status"] = "400" },
                              "Missing x-request-id"
                            )
                            return
                          end

                          if client_id == nil then
                            handle:respond(
                              { [":status"] = "400" },
                              "Missing x-client-id"
                            )
                            return
                          end

                          if session_id == nil then
                            handle:respond(
                              { [":status"] = "400" },
                              "Missing x-session-id"
                            )
                            return
                          end
                        end

                  # 3️⃣ REST → gRPC
                  - name: envoy.filters.http.grpc_json_transcoder
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      proto_descriptor: "/Users/vokhanh12/Development/rongstore-system/server/envoy/all_services_descriptor.pb"
                      services:
                        - iam.v1.IamService

                  # 4️⃣ Router
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router


  clusters:

    - name: service_1
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: service_1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 50051


    - name: iam_jwks_cluster
      connect_timeout: 5s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: iam_jwks_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: iam-service
                      port_value: 8080


    - name: tempo
      connect_timeout: 5s
      type: logical_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: tempo
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 100.114.31.30
                      port_value: 4317


admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9902
